# VulkanSandbox

./: .gitignore  CMakeLists.txt  LICENSE  Sandbox.sln  compile_shaders.bat  main.cpp
Application/Components/include/: Window.h
Application/Vulkan/Components/GLFW/include/: GLFWWindow.h
Application/Vulkan/Components/GLFW/src/: GLFWWindow.cpp
Application/Vulkan/Components/Vulkan/include/: VulkanGraphics.h
Application/Vulkan/Components/Vulkan/src/: VulkanGraphics.cpp
Application/Vulkan/Components/include/: Graphics.h
Application/Vulkan/include/: VulkanApplication.h
Application/Vulkan/src/: VulkanApplication.cpp
Application/_src/: Application.cpp
Application/include/: Application.h
Application/src/: Application.cpp
Data/include/: Engine.h
Exceptions/_include/: Exception.h
Exceptions/_src/: Exception.cpp
Exceptions/include/: Exception.h  ExceptionSeverity.h
Exceptions/src/: Exception.cpp  ExceptionSeverity.cpp
GLFW/_include/: GLFWWindow.h
GLFW/_src/: GLFWWindow.cpp
GLFW/include/: GLFWWindow.h  WindowSurfaceCreationException.h
GLFW/src/: GLFWWindow.cpp  WindowSurfaceCreationException.cpp
IO/: ConsoleOutputChannel.cpp  ConsoleOutputChannel.h
IO/_include/: ConsoleOutputChannel.h
IO/_src/: ConsoleOutputChannel.cpp
IO/include/: OutputChannel.h
Metadata/include/: Engine.h  Version.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  main.cpp
Shaders/: compile_shaders.bat
Shaders/src/: shader.frag
Vulkan/: ArbitraryDeviceSupport.cpp  ArbitraryDeviceSupport.h  DebugMessengerCreationException.cpp  DebugMessengerCreationException.h  Device.cpp  Device.h  DeviceSupport.cpp  DeviceSupport.h  ExtensionUnavailableException.cpp  ExtensionUnavailableException.h  NoPhysicalDeviceCombinationException.cpp  NoPhysicalDeviceCombinationException.h  NoSupportingDeviceException.cpp  NoSupportingDeviceException.h  NoSupportingUnusedDeviceException.cpp  NoSupportingUnusedDeviceException.h  NotEnoughPhysicalDevicesException.cpp  PhysicalInterface.cpp  PhysicalInterface.h  PhysicalInterfaceCreationException.cpp  PhysicalInterfaceCreationException.h  QueueFamilyIndices.h  QueueFamilyRequirements.h  Surface.cpp  Surface.h
Vulkan/Instance/_include/: DebugMessengerCreationException.h  ExtensionUnavailableException.h  Instance.h  InstanceCreationException.h  ValidationLayersUnavailableException.h
Vulkan/Instance/_src/: DebugMessengerCreationException.cpp  ExtensionUnavailableException.cpp  Instance.cpp  InstanceCreationException.cpp  ValidationLayersUnavailableException.cpp
Vulkan/PhysicalInterface/Device/_include/: Device.h  NoSupportingDeviceException.h
Vulkan/PhysicalInterface/Device/_src/: Device.cpp  NoSupportingDeviceException.cpp
Vulkan/PhysicalInterface/DeviceSupport/_include/: ArbitraryDeviceSupport.h  DeviceSupport.h
Vulkan/PhysicalInterface/DeviceSupport/_src/: ArbitraryDeviceSupport.cpp  DeviceSupport.cpp
Vulkan/PhysicalInterface/_include/: NotEnoughPhysicalDevicesException.h  PhysicalInterface.h  PhysicalInterfaceCreationException.h
Vulkan/PhysicalInterface/_src/: NotEnoughPhysicalDevicesException.cpp  PhysicalInterface.cpp  PhysicalInterfaceCreationException.cpp
Vulkan/Queue/_include/: Queue.h  QueueFamilyIndices.h  QueueFamilySupport.h
Vulkan/Queue/_src/: Queue.cpp  QueueFamilyIndices.cpp
Vulkan/Surface/SwapChain/_include/: SwapChainSupportDetails.h
Vulkan/Surface/_include/: Surface.h
Vulkan/Surface/_src/: Surface.cpp
Vulkan/_include/: VulkanApplication.h  VulkanException.h  VulkanGraphics.h
Vulkan/_src/: VulkanApplication.cpp  VulkanException.cpp  VulkanGraphics.cpp
Vulkan/include/: Instance.h  InstanceCreationException.h  VulkanApplication.h  VulkanException.h  VulkanGraphics.h
Vulkan/src/: DebugMessengerCreationException.cpp  ExtensionUnavailableException.cpp  Instance.cpp  InstanceCreationException.cpp  ValidationLayersUnavailableException.cpp  VulkanApplication.cpp  VulkanException.cpp  VulkanGraphics.cpp
